Testing conveyor moving new items

--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -103,8 +103,8 @@ LastLevel=/Game/ThirdPerson/Maps/ThirdPersonMap
 [AssetEditorSubsystem]
 CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=False
-OpenAssetsAtExit=/Game/ConveyorBelt/BP_ConveyorBelt.BP_ConveyorBelt
-OpenAssetsAtExit=/Game/LevelPrototyping/Meshes/SM_ConveyorWall.SM_ConveyorWall
+OpenAssetsAtExit=/Game/ConveyorBelt/BP_Gate.BP_Gate
+OpenAssetsAtExit=/Game/ConveyorBelt/BP_Box.BP_Box
 
 [/Script/UnrealEd.EditorPerProjectUserSettings]
 bDisplayDocumentationLink=False
@@ -202,7 +202,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/LevelPrototyping/Meshes
+ContentBrowserDrawer.SelectedPaths=/Game/ConveyorBelt
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 ContentBrowserDrawer.SelectedCollections=
@@ -1723,12 +1723,37 @@ StaticMesh.Collision=True
 StaticMesh.ImportSettings=True
 StaticMesh.RayTracing=True
 StaticMesh.Navigation=True
+BP_Gate_C.Tick=True
+BP_Gate_C.Replication=True
+BP_Gate_C.Rendering=True
+BP_Gate_C.Collision=True
+BP_Gate_C.Actor=True
+BP_Gate_C.Input=True
+BP_Gate_C.HLOD=True
+BP_Gate_C.Physics=True
+BP_Gate_C.WorldPartition=True
+BP_Gate_C.Events=True
+BP_Box_C.Tick=True
+BP_Box_C.Replication=True
+BP_Box_C.Rendering=True
+BP_Box_C.Collision=True
+BP_Box_C.Actor=True
+BP_Box_C.Input=True
+BP_Box_C.HLOD=True
+BP_Box_C.Physics=True
+BP_Box_C.WorldPartition=True
+BP_Box_C.Events=True
+BP_ConveyorBelt_C.Default=True
+BP_Box_C.TransformCommon=True
+BP_Box_C.Networking=True
+BP_ThirdPersonCharacter_C.HUDs=True
 
 [PlacementMode]
+RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
+RecentlyPlaced=/Game/ConveyorBelt/BP_Box.BP_Box;/Engine/Transient.ActorFactoryBlueprint_0
 RecentlyPlaced=/Game/LevelPrototyping/Meshes/SM_Ramp.SM_Ramp;
 RecentlyPlaced=/Game/LevelPrototyping/Meshes/SM_Cube.SM_Cube;
 RecentlyPlaced=/Game/LevelPrototyping/Meshes/SM_ConveyorWall.SM_ConveyorWall;
-RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/ConveyorBelt/BP_ConveyorBelt.BP_ConveyorBelt;
 RecentlyPlaced=/Game/ThirdPerson/Blueprints/Wiring/INT_Wiring.INT_Wiring;
 RecentlyPlaced=/Game/ThirdPerson/Blueprints/Keypad/INT_Keypad.INT_Keypad;
@@ -1751,7 +1776,7 @@ SceneCaptureComponent2D="\"Object.SceneCapture.ShowFlagSettings.ShowFlagSettings
 SceneCaptureComponent="\"Object.SceneCapture.ShowFlagSettings.ShowFlagSettings[0]\" "
 SceneComponent=
 ActorComponent=
-Object="\"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.AggGeom.BoxElems\" \"Object.StaticMesh.BodySetup.Object.AggGeom.BoxElems.BoxElems[0]\" \"Object.StaticMesh.BodySetup.Object.AggGeom.BoxElems.BoxElems[1]\" \"Object.StaticMesh.BodySetup.Object.AggGeom.BoxElems.BoxElems[2]\" \"Object.StaticMesh.BodySetup.Object.AggGeom.BoxElems.BoxElems[3]\" \"Object.StaticMesh.BodySetup.Object.AggGeom.BoxElems.BoxElems[4]\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems\" \"Object.StaticMesh.BodySetup.Object.DefaultInstance\" "
+Object=
 Image=
 Widget="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" \"Object.Render Transform.RenderTransformPivot\" "
 Visual="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" \"Object.Render Transform.RenderTransformPivot\" "
@@ -1794,8 +1819,8 @@ SwitchCompatible=
 SwitchCompatible_11=
 W_Wiring1_C=
 MultiLineEditableTextBox="\"Object.Style.WidgetStyle\" \"Object.Style.WidgetStyle.TextStyle\" \"Object.Style.WidgetStyle.TextStyle.Font\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" \"Object.Render Transform.RenderTransformPivot\" "
-StaticMesh="\"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.AggGeom.BoxElems\" \"Object.StaticMesh.BodySetup.Object.AggGeom.BoxElems.BoxElems[0]\" \"Object.StaticMesh.BodySetup.Object.AggGeom.BoxElems.BoxElems[1]\" \"Object.StaticMesh.BodySetup.Object.AggGeom.BoxElems.BoxElems[2]\" \"Object.StaticMesh.BodySetup.Object.AggGeom.BoxElems.BoxElems[3]\" \"Object.StaticMesh.BodySetup.Object.AggGeom.BoxElems.BoxElems[4]\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems\" \"Object.StaticMesh.BodySetup.Object.DefaultInstance\" "
-StreamableRenderAsset="\"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.AggGeom.BoxElems\" \"Object.StaticMesh.BodySetup.Object.AggGeom.BoxElems.BoxElems[0]\" \"Object.StaticMesh.BodySetup.Object.AggGeom.BoxElems.BoxElems[1]\" \"Object.StaticMesh.BodySetup.Object.AggGeom.BoxElems.BoxElems[2]\" \"Object.StaticMesh.BodySetup.Object.AggGeom.BoxElems.BoxElems[3]\" \"Object.StaticMesh.BodySetup.Object.AggGeom.BoxElems.BoxElems[4]\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems\" \"Object.StaticMesh.BodySetup.Object.DefaultInstance\" "
+StaticMesh="\"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.AggGeom.BoxElems\" \"Object.StaticMesh.BodySetup.Object.AggGeom.BoxElems.BoxElems[0]\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems\" \"Object.StaticMesh.BodySetup.Object.DefaultInstance\" "
+StreamableRenderAsset="\"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.AggGeom.BoxElems\" \"Object.StaticMesh.BodySetup.Object.AggGeom.BoxElems.BoxElems[0]\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems\" \"Object.StaticMesh.BodySetup.Object.DefaultInstance\" "
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -2887,7 +2912,7 @@ K2Node_VariableGet=PropertyWrapper.DefaultValueCategory.CameraList,K2Node_Variab
 INT_Keypad_C=PropertyWrapper.DefaultValueCategory.CameraList,K2Node_VariableGet.DefaultValueCategory.CameraList,PostProcessVolume.Lens.Lens,PropertyWrapper.DefaultValueCategory.NewLocalVar,K2Node_VariableSet.DefaultValueCategory.NewLocalVar,
 SkeletalMeshComponent=PropertyWrapper.DefaultValueCategory.CameraList,K2Node_VariableGet.DefaultValueCategory.CameraList,PostProcessVolume.Lens.Lens,PropertyWrapper.DefaultValueCategory.NewLocalVar,K2Node_VariableSet.DefaultValueCategory.NewLocalVar,
 K2Node_VariableSet=PropertyWrapper.DefaultValueCategory.CameraList,K2Node_VariableGet.DefaultValueCategory.CameraList,PostProcessVolume.Lens.Lens,PropertyWrapper.DefaultValueCategory.NewLocalVar,K2Node_VariableSet.DefaultValueCategory.NewLocalVar,
-CapsuleComponent=
+CapsuleComponent=PropertyWrapper.DefaultValueCategory.CameraList,K2Node_VariableGet.DefaultValueCategory.CameraList,PostProcessVolume.Lens.Lens,PropertyWrapper.DefaultValueCategory.NewLocalVar,K2Node_VariableSet.DefaultValueCategory.NewLocalVar,
 K2Node_Variable=PropertyWrapper.DefaultValueCategory.CameraList,K2Node_VariableGet.DefaultValueCategory.CameraList,
 SceneComponent=
 BP_ThirdPersonGameMode_C=PropertyWrapper.DefaultValueCategory.CameraList,K2Node_VariableGet.DefaultValueCategory.CameraList,PostProcessVolume.Lens.Lens,PropertyWrapper.DefaultValueCategory.NewLocalVar,K2Node_VariableSet.DefaultValueCategory.NewLocalVar,
@@ -2949,6 +2974,7 @@ MultiLineEditableTextBox=PropertyWrapper.DefaultValueCategory.CameraList,K2Node_
 BP_ConveyorBelt_C=PropertyWrapper.DefaultValueCategory.CameraList,K2Node_VariableGet.DefaultValueCategory.CameraList,PostProcessVolume.Lens.Lens,PropertyWrapper.DefaultValueCategory.NewLocalVar,K2Node_VariableSet.DefaultValueCategory.NewLocalVar,
 Socket_C=PropertyWrapper.DefaultValueCategory.CameraList,K2Node_VariableGet.DefaultValueCategory.CameraList,PostProcessVolume.Lens.Lens,PropertyWrapper.DefaultValueCategory.NewLocalVar,K2Node_VariableSet.DefaultValueCategory.NewLocalVar,
 StaticMesh=StaticMesh.ImportSettings.Mesh,
+BP_Box_C=PropertyWrapper.DefaultValueCategory.CameraList,K2Node_VariableGet.DefaultValueCategory.CameraList,PostProcessVolume.Lens.Lens,PropertyWrapper.DefaultValueCategory.NewLocalVar,K2Node_VariableSet.DefaultValueCategory.NewLocalVar,
 
 [DetailMultiObjectNodeExpansion]
 GeneralProjectSettings=True
@@ -2977,26 +3003,26 @@ ScaleFactor=1
 bCanPreviewSwapAspectRatio=False
 
 [ContentBrowserRecent]
-MRUItem0=/Game/LevelPrototyping/Meshes/SM_ConveyorWall
-MRUItem1=/Game/ConveyorBelt/BP_ConveyorBelt
-MRUItem2=/Game/ThirdPerson/Blueprints/HUD/PngItem_11656
-MRUItem3=/Game/ThirdPerson/Blueprints/HUD/W_HUD
-MRUItem4=/Game/ThirdPerson/Blueprints/HUD/Notes
-MRUItem5=/Game/ThirdPerson/Blueprints/HUD/M_Note
-MRUItem6=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
-MRUItem7=/Game/ThirdPerson/Blueprints/Wiring/INT_Wiring
-MRUItem8=/Game/ThirdPerson/Blueprints/Wiring/W_Wiring1
-MRUItem9=/Game/ThirdPerson/Blueprints/Wiring/W_Wiring
-MRUItem10=/Game/ThirdPerson/Blueprints/Keypad/IF_Keypad
-MRUItem11=/Game/ThirdPerson/Inventory/W_Menu
-MRUItem12=/Game/ThirdPerson/Keypad/INT_Keypad
-MRUItem13=/Game/ThirdPerson/Blueprints/NewDialogueVoice
-MRUItem14=/Game/ThirdPerson/Keypad/W_Keypad
-MRUItem15=/Game/ThirdPerson/Sounds/BP_SoundManager
-MRUItem16=/Game/ThirdPerson/Blueprints/BP_GameManager
-MRUItem17=/Game/ThirdPerson/Inventory/S_ItemReference
-MRUItem18=/Game/ThirdPerson/Blueprints/INT_TextBased
-MRUItem19=/Game/ThirdPerson/Sounds/IF_Sound
+MRUItem0=/Engine/BasicShapes/Cube
+MRUItem1=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
+MRUItem2=/Game/ThirdPerson/Blueprints/Wiring/INT_Wiring
+MRUItem3=/Game/ConveyorBelt/BP_ConveyorBelt
+MRUItem4=/Game/ConveyorBelt/BP_Box
+MRUItem5=/Game/ConveyorBelt/BP_Gate
+MRUItem6=/Game/LevelPrototyping/Meshes/SM_ConveyorWall
+MRUItem7=/Game/ThirdPerson/Blueprints/HUD/PngItem_11656
+MRUItem8=/Game/ThirdPerson/Blueprints/HUD/W_HUD
+MRUItem9=/Game/ThirdPerson/Blueprints/HUD/Notes
+MRUItem10=/Game/ThirdPerson/Blueprints/HUD/M_Note
+MRUItem11=/Game/ThirdPerson/Blueprints/Wiring/W_Wiring1
+MRUItem12=/Game/ThirdPerson/Blueprints/Wiring/W_Wiring
+MRUItem13=/Game/ThirdPerson/Blueprints/Keypad/IF_Keypad
+MRUItem14=/Game/ThirdPerson/Inventory/W_Menu
+MRUItem15=/Game/ThirdPerson/Keypad/INT_Keypad
+MRUItem16=/Game/ThirdPerson/Blueprints/NewDialogueVoice
+MRUItem17=/Game/ThirdPerson/Keypad/W_Keypad
+MRUItem18=/Game/ThirdPerson/Sounds/BP_SoundManager
+MRUItem19=/Game/ThirdPerson/Blueprints/BP_GameManager
 
 [UMGSequencerSettings SequencerSettings]
 AutoChangeMode=None
@@ -3086,6 +3112,9 @@ MultiLineEditableTextBox.Wrapping=False
 MultiLineEditableTextBox.Appearance=True
 PolygonOnMeshToolProperties.Operation=False
 StaticMeshActor.StaticMesh=True
+StaticMeshComponent.ComponentTick=False
+StaticMeshComponent.Physics=True
+StaticMeshComponent.Collision=False
 
 [AssetEditorToolkitTabLocation]
 /Game/ThirdPerson/Keypad/KeypadRender.KeypadRender=1
@@ -3097,7 +3126,7 @@ StaticMeshActor.StaticMesh=True
 /Game/ThirdPerson/Input/Actions/IA_Jump.IA_Jump=1
 /Game/ThirdPerson/Input/IMC_Default.IMC_Default=1
 /Game/ThirdPerson/Blueprints/INT_TextBased.INT_TextBased=1
-/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter=1
+/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter=0
 /Game/ThirdPerson/Keypad/DigitMaterials/BP_1.BP_1=1
 /Game/ThirdPerson/Input/Actions/IA_Click.IA_Click=1
 /Game/ThirdPerson/Blueprints/TextUI.TextUI=1
@@ -3150,13 +3179,16 @@ StaticMeshActor.StaticMesh=True
 /Game/ThirdPerson/Blueprints/NewDialogueVoice.NewDialogueVoice=1
 /Game/ThirdPerson/Blueprints/Keypad/IF_Puzzle.IF_Puzzle=1
 /Game/ThirdPerson/Blueprints/Wiring/W_Wiring.W_Wiring=1
-/Game/ThirdPerson/Blueprints/Wiring/INT_Wiring.INT_Wiring=1
+/Game/ThirdPerson/Blueprints/Wiring/INT_Wiring.INT_Wiring=0
 /Game/ThirdPerson/Blueprints/Keypad/INT_Keypad.INT_Keypad=1
 /Game/ThirdPerson/Blueprints/Wiring/W_WiringOld.W_WiringOld=1
 /Game/ThirdPerson/Blueprints/HUD/Notes.Notes=1
 /Game/ThirdPerson/Blueprints/HUD/M_Note.M_Note=1
-/Game/ConveyorBelt/BP_ConveyorBelt.BP_ConveyorBelt=0
+/Game/ConveyorBelt/BP_ConveyorBelt.BP_ConveyorBelt=1
 /Game/LevelPrototyping/Meshes/SM_ConveyorWall.SM_ConveyorWall=0
+/Engine/BasicShapes/Cube.Cube=0
+/Game/ConveyorBelt/BP_Gate.BP_Gate=0
+/Game/ConveyorBelt/BP_Box.BP_Box=0
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -3197,7 +3229,7 @@ bShowParentClassInOverrides=True
 bShowEmptySections=True
 bShowAccessSpecifier=False
 Bookmarks=()
-PerBlueprintSettings=()
+PerBlueprintSettings=(("/Game/ConveyorBelt/BP_ConveyorBelt.BP_ConveyorBelt", (WatchedPins=((OwningNode="/Game/ConveyorBelt/BP_ConveyorBelt.BP_ConveyorBelt:EventGraph.K2Node_CallFunction_1",PinId=9F3167194542820299F5C681E1F52FE8)))))
 bIncludeCommentNodesInBookmarksTab=True
 bShowBookmarksForCurrentDocumentOnlyInTab=False
 GraphEditorQuickJumps=()
