--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -103,8 +103,8 @@ LastLevel=/Game/ThirdPerson/Maps/ThirdPersonMap
 [AssetEditorSubsystem]
 CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=False
-OpenAssetsAtExit=/Game/ConveyorBelt/BP_Gate.BP_Gate
 OpenAssetsAtExit=/Game/ConveyorBelt/BP_Box.BP_Box
+OpenAssetsAtExit=/Game/ConveyorBelt/W_ConveyorBelt.W_ConveyorBelt
 
 [/Script/UnrealEd.EditorPerProjectUserSettings]
 bDisplayDocumentationLink=False
@@ -1747,6 +1747,19 @@ BP_ConveyorBelt_C.Default=True
 BP_Box_C.TransformCommon=True
 BP_Box_C.Networking=True
 BP_ThirdPersonCharacter_C.HUDs=True
+W_ConveyorBelt_C.Default=True
+W_ConveyorBelt_C.Appearance=True
+W_ConveyorBelt_C.Designer=True
+W_ConveyorBelt_C.Input=True
+W_ConveyorBelt_C.Interaction=True
+W_ConveyorBelt_C.Performance=True
+W_ConveyorBelt_C.Layout=True
+W_ConveyorBelt_C.Behavior=True
+W_ConveyorBelt_C.Render Transform=True
+W_ConveyorBelt_C.Localization=True
+W_ConveyorBelt_C.Accessibility=True
+W_ConveyorBelt_C.Clipping=True
+W_ConveyorBelt_C.Navigation=True
 
 [PlacementMode]
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
@@ -1790,7 +1803,7 @@ ContentWidget="\"Object.Appearance.WidgetStyle.Normal.OutlineSettings\" \"Object
 PanelWidget="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" \"Object.Render Transform.RenderTransformPivot\" "
 Border="\"Object.Appearance.Background\" \"Object.Appearance.Background.TintColor\" \"Object.Appearance.Background.OutlineSettings.CornerRadii\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" \"Object.Render Transform.RenderTransformPivot\" "
 Keypad_Widget_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" \"Object.Render Transform.RenderTransformPivot\" "
-UserWidget=
+UserWidget="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" \"Object.Render Transform.RenderTransformPivot\" "
 UniformGridPanel="\"Object.Child Layout.SlotPadding\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" \"Object.Render Transform.RenderTransformPivot\" "
 CanvasPanel="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" \"Object.Render Transform.RenderTransformPivot\" "
 BP_ThirdPersonCharacter_C=
@@ -1821,6 +1834,7 @@ W_Wiring1_C=
 MultiLineEditableTextBox="\"Object.Style.WidgetStyle\" \"Object.Style.WidgetStyle.TextStyle\" \"Object.Style.WidgetStyle.TextStyle.Font\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" \"Object.Render Transform.RenderTransformPivot\" "
 StaticMesh="\"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.AggGeom.BoxElems\" \"Object.StaticMesh.BodySetup.Object.AggGeom.BoxElems.BoxElems[0]\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems\" \"Object.StaticMesh.BodySetup.Object.DefaultInstance\" "
 StreamableRenderAsset="\"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.AggGeom.BoxElems\" \"Object.StaticMesh.BodySetup.Object.AggGeom.BoxElems.BoxElems[0]\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems\" \"Object.StaticMesh.BodySetup.Object.DefaultInstance\" "
+W_ConveyorBelt_C="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" \"Object.Render Transform.RenderTransformPivot\" "
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -2868,8 +2882,8 @@ HierarchicalLODUtilities.TimeStamp=2023.02.08-14.13.00
 HierarchicalLODUtilities.LastCompileMethod=Unknown
 BlueprintGraph.TimeStamp=2023.02.15-17.10.22
 BlueprintGraph.LastCompileMethod=External
-SequencerWidgets.TimeStamp=2023.02.08-14.13.08
-SequencerWidgets.LastCompileMethod=Unknown
+SequencerWidgets.TimeStamp=2023.02.15-17.10.42
+SequencerWidgets.LastCompileMethod=External
 TextureEditor.TimeStamp=2023.02.08-14.13.10
 TextureEditor.LastCompileMethod=Unknown
 SkeletonEditor.TimeStamp=2023.02.08-14.13.10
@@ -3003,26 +3017,26 @@ ScaleFactor=1
 bCanPreviewSwapAspectRatio=False
 
 [ContentBrowserRecent]
-MRUItem0=/Engine/BasicShapes/Cube
-MRUItem1=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
-MRUItem2=/Game/ThirdPerson/Blueprints/Wiring/INT_Wiring
-MRUItem3=/Game/ConveyorBelt/BP_ConveyorBelt
-MRUItem4=/Game/ConveyorBelt/BP_Box
-MRUItem5=/Game/ConveyorBelt/BP_Gate
-MRUItem6=/Game/LevelPrototyping/Meshes/SM_ConveyorWall
-MRUItem7=/Game/ThirdPerson/Blueprints/HUD/PngItem_11656
-MRUItem8=/Game/ThirdPerson/Blueprints/HUD/W_HUD
-MRUItem9=/Game/ThirdPerson/Blueprints/HUD/Notes
-MRUItem10=/Game/ThirdPerson/Blueprints/HUD/M_Note
-MRUItem11=/Game/ThirdPerson/Blueprints/Wiring/W_Wiring1
-MRUItem12=/Game/ThirdPerson/Blueprints/Wiring/W_Wiring
-MRUItem13=/Game/ThirdPerson/Blueprints/Keypad/IF_Keypad
-MRUItem14=/Game/ThirdPerson/Inventory/W_Menu
-MRUItem15=/Game/ThirdPerson/Keypad/INT_Keypad
-MRUItem16=/Game/ThirdPerson/Blueprints/NewDialogueVoice
-MRUItem17=/Game/ThirdPerson/Keypad/W_Keypad
-MRUItem18=/Game/ThirdPerson/Sounds/BP_SoundManager
-MRUItem19=/Game/ThirdPerson/Blueprints/BP_GameManager
+MRUItem0=/Game/ConveyorBelt/W_ConveyorBelt
+MRUItem1=/Game/ConveyorBelt/BP_Box
+MRUItem2=/Engine/BasicShapes/Cube
+MRUItem3=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
+MRUItem4=/Game/ThirdPerson/Blueprints/Wiring/INT_Wiring
+MRUItem5=/Game/ConveyorBelt/BP_ConveyorBelt
+MRUItem6=/Game/ConveyorBelt/BP_Gate
+MRUItem7=/Game/LevelPrototyping/Meshes/SM_ConveyorWall
+MRUItem8=/Game/ThirdPerson/Blueprints/HUD/PngItem_11656
+MRUItem9=/Game/ThirdPerson/Blueprints/HUD/W_HUD
+MRUItem10=/Game/ThirdPerson/Blueprints/HUD/Notes
+MRUItem11=/Game/ThirdPerson/Blueprints/HUD/M_Note
+MRUItem12=/Game/ThirdPerson/Blueprints/Wiring/W_Wiring1
+MRUItem13=/Game/ThirdPerson/Blueprints/Wiring/W_Wiring
+MRUItem14=/Game/ThirdPerson/Blueprints/Keypad/IF_Keypad
+MRUItem15=/Game/ThirdPerson/Inventory/W_Menu
+MRUItem16=/Game/ThirdPerson/Keypad/INT_Keypad
+MRUItem17=/Game/ThirdPerson/Blueprints/NewDialogueVoice
+MRUItem18=/Game/ThirdPerson/Keypad/W_Keypad
+MRUItem19=/Game/ThirdPerson/Sounds/BP_SoundManager
 
 [UMGSequencerSettings SequencerSettings]
 AutoChangeMode=None
@@ -3189,6 +3203,7 @@ StaticMeshComponent.Collision=False
 /Engine/BasicShapes/Cube.Cube=0
 /Game/ConveyorBelt/BP_Gate.BP_Gate=0
 /Game/ConveyorBelt/BP_Box.BP_Box=0
+/Game/ConveyorBelt/W_ConveyorBelt.W_ConveyorBelt=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
