Commenting addition for problems
To Do for conveyor:
FIX CONVEYOR BELT SO STUFF CAN MOVE AGAIN.!!

Fix logic check in Widget script for actor mesh.
Add tags to BP_Box for fragile / dangerous options
Feedback / input validation

--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -110,9 +110,6 @@ LastLevel=/Game/ThirdPerson/Maps/ThirdPersonMap
 [AssetEditorSubsystem]
 CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=False
-OpenAssetsAtExit=/Game/ConveyorBelt/BP_Box.BP_Box
-OpenAssetsAtExit=/Game/ConveyorBelt/BP_ConveyorBelt.BP_ConveyorBelt
-OpenAssetsAtExit=/Game/ConveyorBelt/W_ConveyorBelt.W_ConveyorBelt
 
 [/Script/UnrealEd.EditorPerProjectUserSettings]
 bDisplayDocumentationLink=False
@@ -2142,7 +2139,7 @@ SceneCaptureComponent2D="\"Object.SceneCapture.ShowFlagSettings.ShowFlagSettings
 SceneCaptureComponent="\"Object.SceneCapture.ShowFlagSettings.ShowFlagSettings[0]\" "
 SceneComponent="\"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
 ActorComponent="\"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
-Object="\"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
+Object=
 Image="\"Object.Appearance.Brush\" "
 Widget=
 Visual=
@@ -3460,10 +3457,10 @@ ScaleFactor=1
 bCanPreviewSwapAspectRatio=False
 
 [ContentBrowserRecent]
-MRUItem0=/Game/ConveyorBelt/W_ConveyorBelt
-MRUItem1=/Game/ConveyorBelt/BP_ConveyorBelt
-MRUItem2=/Game/ConveyorBelt/BP_Box
-MRUItem3=/Game/ConveyorBelt/BP_Gate
+MRUItem0=/Game/ConveyorBelt/BP_Gate
+MRUItem1=/Game/ConveyorBelt/W_ConveyorBelt
+MRUItem2=/Game/ConveyorBelt/BP_ConveyorBelt
+MRUItem3=/Game/ConveyorBelt/BP_Box
 MRUItem4=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
 MRUItem5=/Game/ThirdPerson/3D_Models/WallAndFloor/M_Walls
 MRUItem6=/Game/ThirdPerson/3D_Models/Meshs/ConveyorXRay
