--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -115,6 +115,7 @@ OpenAssetsAtExit=/Game/ThirdPerson/Widgets/TextUI.TextUI
 OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_GameManager.BP_GameManager
 OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter
 OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/Interactives/Keypad/W_Keypad.W_Keypad
+OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/Interactives/Keypad/INT_Keypad.INT_Keypad
 OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/Interactives/Tutorials/W_TutorialUI.W_TutorialUI
 
 [/Script/UnrealEd.EditorPerProjectUserSettings]
@@ -213,7 +214,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/ThirdPerson/ImageTextures/ItemImages/Papers
+ContentBrowserDrawer.SelectedPaths=/Game/ThirdPerson/Sounds/SoundWaves/SFX
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 ContentBrowserDrawer.SelectedCollections=
@@ -2198,7 +2199,7 @@ Visual="\"Object.Appearance.Brush\" \"Object.Appearance.ColorAndOpacity\" \"Obje
 OBJ_Keypad_C="\"Object.Default.InteractText\" "
 INT_Keypad_C=
 INT_TextBased_C=
-INT_TextBased_C="\"Object.Default.PhaseItemID\" \"Object.Dialogue.Phase Dialogue.Phase Dialogue[0].Speaker_22_43A8129F4A71D4BB4098E98DD99E5B3F\" \"Object.PRogression.CutsceneTrigger\" \"Object.PRogression.ObjectiveTriggers\" "
+INT_TextBased_C="\"Object.Default.PhaseItemID\" \"Object.Dialogue.Phase Dialogue\" \"Object.Dialogue.Phase Dialogue.Phase Dialogue[0].Speaker_22_43A8129F4A71D4BB4098E98DD99E5B3F\" \"Object.Dialogue.Phase Dialogue.Phase Dialogue[6]\" \"Object.Dialogue.Phase Dialogue.Phase Dialogue[6].Text_7_22AB65314FCF56A2B98769A50C6E4781\" \"Object.Dialogue.Phase Dialogue.Phase Dialogue[7]\" \"Object.Dialogue.Phase Dialogue.Phase Dialogue[7].Text_7_22AB65314FCF56A2B98769A50C6E4781\" \"Object.Dialogue.Phase Dialogue.Phase Dialogue[7].Speaker_22_43A8129F4A71D4BB4098E98DD99E5B3F\" \"Object.PRogression.CutsceneTrigger\" \"Object.PRogression.ObjectiveTriggers\" "
 None=======
 None=======
 None=======
@@ -2228,7 +2229,7 @@ CrashReportsPrivacySettings="\"Object.Options.bSendUnattendedBugReports\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
 BP_GameManager_C="\"Object.Default.Cutscenes\" "
 BP_GameManager_C="\"Object.Default.ItemTable.ItemTable[0]\" \"Object.Default.ItemTable.ItemTable[0].CombineInto_10_A1E67FEF49FAC97C8E5A868F73F579FC\" \"Object.Default.ItemTable.ItemTable[1]\" \"Object.Default.ItemTable.ItemTable[1].CombinableWith_9_E7C2233748C1F1FA3AC47BAE7426FCA0\" \"Object.Default.ItemTable.ItemTable[1].CombineInto_10_A1E67FEF49FAC97C8E5A868F73F579FC\" \"Object.Default.Cutscenes.Cutscenes[0]\" \"Object.Default.CharacterList\" "
-BP_GameManager_C="\"Object.Tables.CutsceneMap\" \"Object.Tables.CutsceneMap.CutsceneMap_Value[2]\" "
+BP_GameManager_C=
 PreviewMaterial="\"Object.Lightmass.LightmassSettings\" "
 Material="\"Object.Lightmass.LightmassSettings\" "
 MaterialInterface="\"Object.Lightmass.LightmassSettings\" "
@@ -2255,7 +2256,7 @@ ChangeText_3=
 PlayQuip="\"Struct.NewLocalVar\" "
 PlayQuip_7="\"Struct\" "
 SwitchTiles_4="\"Struct\" "
-INT_Wiring_C="\"Object.Dialogue\" \"Object.Dialogue.PhaseDialogue\" \"Object.Dialogue.PhaseDialogue.PhaseDialogue_Value[4].Text_7_22AB65314FCF56A2B98769A50C6E4781\" \"Object.Dialogue.PhaseDialogue.PhaseDialogue_Value[5].Text_7_22AB65314FCF56A2B98769A50C6E4781\" \"Object.Dialogue.PhaseDialogue.PhaseDialogue_Value[6]\" \"Object.Dialogue.PhaseDialogue.PhaseDialogue_Value[7].Text_7_22AB65314FCF56A2B98769A50C6E4781\" \"Object.Dialogue.PhaseDialogue.PhaseDialogue_Value[7].Speaker_22_43A8129F4A71D4BB4098E98DD99E5B3F\" \"Object.Dialogue.PhaseDialogue.PhaseDialogue_Value[8].Text_7_22AB65314FCF56A2B98769A50C6E4781\" \"Object.Dialogue.PhaseDialogue.PhaseDialogue_Value[8].Speaker_22_43A8129F4A71D4BB4098E98DD99E5B3F\" \"Object.Dialogue.PhaseDialogue.PhaseDialogue_Value[9].Text_7_22AB65314FCF56A2B98769A50C6E4781\" \"Object.Dialogue.PhaseDialogue.PhaseDialogue_Value[9].Speaker_22_43A8129F4A71D4BB4098E98DD99E5B3F\" "
+INT_Wiring_C="\"Object.Dialogue\" \"Object.Dialogue.PhaseDialogue\" \"Object.Dialogue.PhaseDialogue.PhaseDialogue_Value[4]\" \"Object.Dialogue.PhaseDialogue.PhaseDialogue_Value[4].Text_7_22AB65314FCF56A2B98769A50C6E4781\" \"Object.Dialogue.PhaseDialogue.PhaseDialogue_Value[5]\" \"Object.Dialogue.PhaseDialogue.PhaseDialogue_Value[5].Text_7_22AB65314FCF56A2B98769A50C6E4781\" \"Object.Dialogue.PhaseDialogue.PhaseDialogue_Value[6]\" \"Object.Dialogue.PhaseDialogue.PhaseDialogue_Value[6].Text_7_22AB65314FCF56A2B98769A50C6E4781\" \"Object.Dialogue.PhaseDialogue.PhaseDialogue_Value[7]\" \"Object.Dialogue.PhaseDialogue.PhaseDialogue_Value[7].Text_7_22AB65314FCF56A2B98769A50C6E4781\" \"Object.Dialogue.PhaseDialogue.PhaseDialogue_Value[7].Speaker_22_43A8129F4A71D4BB4098E98DD99E5B3F\" \"Object.Dialogue.PhaseDialogue.PhaseDialogue_Value[8].Text_7_22AB65314FCF56A2B98769A50C6E4781\" \"Object.Dialogue.PhaseDialogue.PhaseDialogue_Value[8].Speaker_22_43A8129F4A71D4BB4098E98DD99E5B3F\" \"Object.Dialogue.PhaseDialogue.PhaseDialogue_Value[9].Text_7_22AB65314FCF56A2B98769A50C6E4781\" \"Object.Dialogue.PhaseDialogue.PhaseDialogue_Value[9].Speaker_22_43A8129F4A71D4BB4098E98DD99E5B3F\" "
 StaticMeshComponent="\"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
 MeshComponent="\"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
 PrimitiveComponent="\"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
@@ -3403,7 +3404,7 @@ K2Node_VariableSet=PropertyWrapper.DefaultValueCategory.CameraList,K2Node_Variab
 K2Node_VariableSet=PropertyWrapper.DefaultValueCategory.CameraList,K2Node_VariableGet.DefaultValueCategory.CameraList,PostProcessVolume.Lens.Lens,PropertyWrapper.DefaultValueCategory.NewLocalVar,K2Node_VariableSet.DefaultValueCategory.NewLocalVar,K2Node_FunctionEntry.Inputs.DF812B38495C59AA7DA066A9AA79FA40,PropertyWrapper.DefaultValueCategory.CutsceneTrigger,PropertyWrapper.DefaultValueCategory.ObjectiveTrigger,K2Node_FunctionEntry.Inputs.E26EDD024D5A841C1173529C7079B322,K2Node_FunctionEntry.Inputs.C897AFF6485FF7A028A8C5B2B5B24B14,K2Node_FunctionEntry.Inputs.C901D1694F5E0B1B0395908AB62F10B6,BP_ThirdPersonCharacter_C.Materials.MaterialList,BP_ThirdPersonCharacter_C.Physics.ConstraintsGroup,K2Node_FunctionEntry.Inputs.B87CAF654E3FD31CC75F00B49DE910D9,PropertyWrapper.DefaultValueCategory.ImageContainers,EdGraph.Inputs.C4DF67E14FA6AAE67465D9A058A1AC93,PropertyWrapper.DefaultValueCategory.WireImageMap,PropertyWrapper.DefaultValueCategory.Phase Objectives,PropertyWrapper.DefaultValueCategory.Tutorials,K2Node_FunctionEntry.Inputs.FCB905124E09B2575D3B5E851980BDCC,PropertyWrapper.DefaultValueCategory.CameraMap,
 CapsuleComponent=
 K2Node_Variable=PropertyWrapper.DefaultValueCategory.CameraList,K2Node_VariableGet.DefaultValueCategory.CameraList,PostProcessVolume.Lens.Lens,PropertyWrapper.DefaultValueCategory.NewLocalVar,K2Node_VariableSet.DefaultValueCategory.NewLocalVar,K2Node_FunctionEntry.Inputs.DF812B38495C59AA7DA066A9AA79FA40,PropertyWrapper.DefaultValueCategory.CutsceneTrigger,PropertyWrapper.DefaultValueCategory.ObjectiveTrigger,K2Node_FunctionEntry.Inputs.E26EDD024D5A841C1173529C7079B322,K2Node_FunctionEntry.Inputs.C897AFF6485FF7A028A8C5B2B5B24B14,K2Node_FunctionEntry.Inputs.C901D1694F5E0B1B0395908AB62F10B6,BP_ThirdPersonCharacter_C.Materials.MaterialList,BP_ThirdPersonCharacter_C.Physics.ConstraintsGroup,K2Node_FunctionEntry.Inputs.B87CAF654E3FD31CC75F00B49DE910D9,PropertyWrapper.DefaultValueCategory.ImageContainers,EdGraph.Inputs.C4DF67E14FA6AAE67465D9A058A1AC93,PropertyWrapper.DefaultValueCategory.WireImageMap,PropertyWrapper.DefaultValueCategory.Phase Objectives,PropertyWrapper.DefaultValueCategory.Tutorials,K2Node_FunctionEntry.Inputs.FCB905124E09B2575D3B5E851980BDCC,PropertyWrapper.DefaultValueCategory.CameraMap,
-SceneComponent=
+SceneComponent=PropertyWrapper.DefaultValueCategory.CameraList,K2Node_VariableGet.DefaultValueCategory.CameraList,PostProcessVolume.Lens.Lens,PropertyWrapper.DefaultValueCategory.NewLocalVar,K2Node_VariableSet.DefaultValueCategory.NewLocalVar,K2Node_FunctionEntry.Inputs.DF812B38495C59AA7DA066A9AA79FA40,PropertyWrapper.DefaultValueCategory.CutsceneTrigger,PropertyWrapper.DefaultValueCategory.ObjectiveTrigger,K2Node_FunctionEntry.Inputs.E26EDD024D5A841C1173529C7079B322,K2Node_FunctionEntry.Inputs.C897AFF6485FF7A028A8C5B2B5B24B14,K2Node_FunctionEntry.Inputs.C901D1694F5E0B1B0395908AB62F10B6,BP_ThirdPersonCharacter_C.Materials.MaterialList,BP_ThirdPersonCharacter_C.Physics.ConstraintsGroup,K2Node_FunctionEntry.Inputs.B87CAF654E3FD31CC75F00B49DE910D9,PropertyWrapper.DefaultValueCategory.ImageContainers,EdGraph.Inputs.C4DF67E14FA6AAE67465D9A058A1AC93,PropertyWrapper.DefaultValueCategory.WireImageMap,PropertyWrapper.DefaultValueCategory.Phase Objectives,PropertyWrapper.DefaultValueCategory.Tutorials,K2Node_FunctionEntry.Inputs.FCB905124E09B2575D3B5E851980BDCC,PropertyWrapper.DefaultValueCategory.CameraMap,
 BP_ThirdPersonGameMode_C=PropertyWrapper.DefaultValueCategory.CameraList,K2Node_VariableGet.DefaultValueCategory.CameraList,PostProcessVolume.Lens.Lens,PropertyWrapper.DefaultValueCategory.NewLocalVar,K2Node_VariableSet.DefaultValueCategory.NewLocalVar,K2Node_FunctionEntry.Inputs.DF812B38495C59AA7DA066A9AA79FA40,PropertyWrapper.DefaultValueCategory.CutsceneTrigger,PropertyWrapper.DefaultValueCategory.ObjectiveTrigger,K2Node_FunctionEntry.Inputs.E26EDD024D5A841C1173529C7079B322,K2Node_FunctionEntry.Inputs.C897AFF6485FF7A028A8C5B2B5B24B14,K2Node_FunctionEntry.Inputs.C901D1694F5E0B1B0395908AB62F10B6,BP_ThirdPersonCharacter_C.Materials.MaterialList,BP_ThirdPersonCharacter_C.Physics.ConstraintsGroup,K2Node_FunctionEntry.Inputs.B87CAF654E3FD31CC75F00B49DE910D9,PropertyWrapper.DefaultValueCategory.ImageContainers,EdGraph.Inputs.C4DF67E14FA6AAE67465D9A058A1AC93,PropertyWrapper.DefaultValueCategory.WireImageMap,PropertyWrapper.DefaultValueCategory.Phase Objectives,PropertyWrapper.DefaultValueCategory.Tutorials,K2Node_FunctionEntry.Inputs.FCB905124E09B2575D3B5E851980BDCC,
 INT_TextBased_C=PropertyWrapper.DefaultValueCategory.CameraList,K2Node_VariableGet.DefaultValueCategory.CameraList,PostProcessVolume.Lens.Lens,PropertyWrapper.DefaultValueCategory.NewLocalVar,K2Node_VariableSet.DefaultValueCategory.NewLocalVar,K2Node_FunctionEntry.Inputs.DF812B38495C59AA7DA066A9AA79FA40,PropertyWrapper.DefaultValueCategory.CutsceneTrigger,PropertyWrapper.DefaultValueCategory.ObjectiveTrigger,K2Node_FunctionEntry.Inputs.E26EDD024D5A841C1173529C7079B322,K2Node_FunctionEntry.Inputs.C897AFF6485FF7A028A8C5B2B5B24B14,K2Node_FunctionEntry.Inputs.C901D1694F5E0B1B0395908AB62F10B6,
 INT_TextBased_C=PropertyWrapper.DefaultValueCategory.CameraList,K2Node_VariableGet.DefaultValueCategory.CameraList,PostProcessVolume.Lens.Lens,PropertyWrapper.DefaultValueCategory.NewLocalVar,K2Node_VariableSet.DefaultValueCategory.NewLocalVar,K2Node_FunctionEntry.Inputs.DF812B38495C59AA7DA066A9AA79FA40,PropertyWrapper.DefaultValueCategory.CutsceneTrigger,PropertyWrapper.DefaultValueCategory.ObjectiveTrigger,K2Node_FunctionEntry.Inputs.E26EDD024D5A841C1173529C7079B322,K2Node_FunctionEntry.Inputs.C897AFF6485FF7A028A8C5B2B5B24B14,K2Node_FunctionEntry.Inputs.C901D1694F5E0B1B0395908AB62F10B6,BP_ThirdPersonCharacter_C.Materials.MaterialList,BP_ThirdPersonCharacter_C.Physics.ConstraintsGroup,K2Node_FunctionEntry.Inputs.B87CAF654E3FD31CC75F00B49DE910D9,PropertyWrapper.DefaultValueCategory.ImageContainers,EdGraph.Inputs.C4DF67E14FA6AAE67465D9A058A1AC93,PropertyWrapper.DefaultValueCategory.WireImageMap,PropertyWrapper.DefaultValueCategory.Phase Objectives,PropertyWrapper.DefaultValueCategory.Tutorials,K2Node_FunctionEntry.Inputs.FCB905124E09B2575D3B5E851980BDCC,PropertyWrapper.DefaultValueCategory.CameraMap,
@@ -3549,15 +3550,15 @@ ScaleFactor=1
 bCanPreviewSwapAspectRatio=False
 
 [ContentBrowserRecent]
-MRUItem0=/Game/ThirdPerson/Blueprints/Interactives/INT_TextBased
-MRUItem1=/Game/ThirdPerson/Blueprints/Interactives/Wiring/INT_Wiring
-MRUItem2=/Game/ThirdPerson/Blueprints/Interactives/Tutorials/W_TutorialUI
-MRUItem3=/Game/ThirdPerson/Menus/W_Menu
-MRUItem4=/Game/ThirdPerson/Blueprints/HUD/W_HUD
-MRUItem5=/Game/ThirdPerson/PostProcess/FadeSquence
-MRUItem6=/Game/ThirdPerson/ImageTextures/ItemImages/Papers/Puzzle_Full
-MRUItem7=/Game/ThirdPerson/Blueprints/Interactives/Wiring/W_Wiring
-MRUItem8=/Game/ThirdPerson/Blueprints/Interactives/Keypad/INT_Keypad
+MRUItem0=/Game/ThirdPerson/Blueprints/Interactives/Keypad/INT_Keypad
+MRUItem1=/Game/ThirdPerson/Blueprints/Interactives/INT_TextBased
+MRUItem2=/Game/ThirdPerson/Blueprints/Interactives/Wiring/INT_Wiring
+MRUItem3=/Game/ThirdPerson/Blueprints/Interactives/Tutorials/W_TutorialUI
+MRUItem4=/Game/ThirdPerson/Menus/W_Menu
+MRUItem5=/Game/ThirdPerson/Blueprints/HUD/W_HUD
+MRUItem6=/Game/ThirdPerson/PostProcess/FadeSquence
+MRUItem7=/Game/ThirdPerson/ImageTextures/ItemImages/Papers/Puzzle_Full
+MRUItem8=/Game/ThirdPerson/Blueprints/Interactives/Wiring/W_Wiring
 MRUItem9=/Game/ThirdPerson/Blueprints/Interactives/Keypad/W_Keypad
 MRUItem10=/Game/UIElements/Menus/Wire_Cutters__text_png
 MRUItem11=/Game/ThirdPerson/Interfaces/IF_Inventory
