Fix menu in keypad

--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -114,6 +114,7 @@ SuppressRestorePreviouslyOpenAssetsNotification=False
 OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_GameManager.BP_GameManager
 OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter
 OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/Interactives/INT_TextBased.INT_TextBased
+OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/Interactives/Keypad/INT_Keypad.INT_Keypad
 
 [/Script/UnrealEd.EditorPerProjectUserSettings]
 bDisplayDocumentationLink=False
@@ -2209,7 +2210,7 @@ Visual=
 OBJ_Keypad_C="\"Object.Default.InteractText\" "
 INT_Keypad_C=
 INT_TextBased_C=
-INT_TextBased_C="\"Object.Default.PhaseItemID\" \"Object.Dialogue.Phase Dialogue\" \"Object.Dialogue.Phase Dialogue.Phase Dialogue[0].Speaker_22_43A8129F4A71D4BB4098E98DD99E5B3F\" \"Object.PRogression.CutsceneTrigger\" \"Object.PRogression.ObjectiveTriggers\" "
+INT_TextBased_C="\"Object.Default.PhaseItemID\" \"Object.Dialogue.Phase Dialogue\" \"Object.PRogression.CutsceneTrigger\" \"Object.PRogression.ObjectiveTriggers\" "
 None=======
 None=======
 None=======
@@ -3563,19 +3564,19 @@ ScaleFactor=1
 bCanPreviewSwapAspectRatio=False
 
 [ContentBrowserRecent]
-MRUItem0=/Game/ThirdPerson/Blueprints/Interactives/INT_TextBased
-MRUItem1=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
-MRUItem2=/Game/ThirdPerson/Blueprints/BP_GameManager
-MRUItem3=/Game/ConveyorBelt/BP_ConveyorBelt
-MRUItem4=/Game/ConveyorBelt/BP_Box
-MRUItem5=/Game/ConveyorBelt/W_ConveyorBelt
-MRUItem6=/Game/ConveyorBelt/BP_Gate
-MRUItem7=/Game/ThirdPerson/Blueprints/HUD/W_HUD
-MRUItem8=/Game/ThirdPerson/PostProcess/FadeSquence
-MRUItem9=/Game/ThirdPerson/ImageTextures/ItemImages/Papers/Puzzle_Full
-MRUItem10=/Game/ThirdPerson/Blueprints/Interactives/Wiring/INT_Wiring
-MRUItem11=/Game/ThirdPerson/Blueprints/Interactives/Wiring/W_Wiring
-MRUItem12=/Game/ThirdPerson/Blueprints/Interactives/Keypad/INT_Keypad
+MRUItem0=/Game/ThirdPerson/Blueprints/Interactives/Keypad/INT_Keypad
+MRUItem1=/Game/ThirdPerson/Blueprints/Interactives/INT_TextBased
+MRUItem2=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
+MRUItem3=/Game/ThirdPerson/Blueprints/BP_GameManager
+MRUItem4=/Game/ConveyorBelt/BP_ConveyorBelt
+MRUItem5=/Game/ConveyorBelt/BP_Box
+MRUItem6=/Game/ConveyorBelt/W_ConveyorBelt
+MRUItem7=/Game/ConveyorBelt/BP_Gate
+MRUItem8=/Game/ThirdPerson/Blueprints/HUD/W_HUD
+MRUItem9=/Game/ThirdPerson/PostProcess/FadeSquence
+MRUItem10=/Game/ThirdPerson/ImageTextures/ItemImages/Papers/Puzzle_Full
+MRUItem11=/Game/ThirdPerson/Blueprints/Interactives/Wiring/INT_Wiring
+MRUItem12=/Game/ThirdPerson/Blueprints/Interactives/Wiring/W_Wiring
 MRUItem13=/Game/ThirdPerson/Blueprints/Interactives/Keypad/W_Keypad
 MRUItem14=/Game/UIElements/Menus/Wire_Cutters__text_png
 MRUItem15=/Game/ThirdPerson/Interfaces/IF_Inventory
